<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jbehave</groupId>
    <artifactId>Jbehave</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Jbehave</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serenity.version>2.0.52</serenity.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.release>11</maven.compiler.release>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.jbehave/jbehave-core -->
        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-core</artifactId>
            <version>4.5</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.11</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-jbehave -->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-jbehave</artifactId>
            <version>1.46.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core -->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>2.0.52</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-junit -->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>2.0.52</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.5.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>2.2</version>
        </dependency>


    </dependencies>


    <profiles>
        <profile>
            <id>multithread</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
					<plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.7</version>
						<configuration>
							<generateBackupPoms>false</generateBackupPoms>
						</configuration>
					</plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.0</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.22.0</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.0</version>
                        <configuration>
                            <systemPropertyVariables>
                                <webdriver.driver>chrome</webdriver.driver>
                            </systemPropertyVariables>
                            <includes>
                                <include>**/RunnerOne.java</include>
                                <include>**/RunnerTwo.java</include>
                                <include>**/RunnerThree.java</include>
                                <include>**/RunnerFour.java</include>
                            </includes>
                            <argLine>-Xmx786m</argLine>
                            <parallel>classes</parallel>
                            <forkCount>4</forkCount>
                            <threadCount>8</threadCount>
                            <reuseForks>false</reuseForks>
                        </configuration>
                        <executions>
                            <execution>
                                <id>execute-acceptance-test-suite</id>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>net.serenity-bdd.maven.plugins</groupId>
                        <artifactId>serenity-maven-plugin</artifactId>
                        <version>${serenity.version}</version>
                        <executions>
                            <execution>
                                <id>serenity-reports</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>singlethread</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
					<!-- This plugin helps finding the latest plugin or dependency versions for your modules.
					Open up the terminal and execute this command to find the plugin versions you have to update:
					mvn versions:display-plugin-updates -->
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>versions-maven-plugin</artifactId>
						<version>2.5</version>
						<configuration>
							<generateBackupPoms>false</generateBackupPoms>
						</configuration>
					</plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.0</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.22.0</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.0</version>
                        <configuration>
                            <systemPropertyVariables>
                                <webdriver.driver>chrome</webdriver.driver>
                            </systemPropertyVariables>
                            <includes>
                                <include>**/SerenityJbehaveSelenium.java</include>
                            </includes>
                            <argLine>-Xms256m -Xmx786m -XX:MaxPermSize=256m -Duser.language=en --illegal-access=permit</argLine>
                        </configuration>
                        <executions>
                            <execution>
                                <id>execute-acceptance-test-suite</id>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>net.serenity-bdd.maven.plugins</groupId>
                        <artifactId>serenity-maven-plugin</artifactId>
                        <version>${serenity.version}</version>
                        <executions>
                            <execution>
                                <id>serenity-reports</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

	<!--<plugin>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.22.2</version>
		<configuration>
			<parallel>classes</parallel>
			<threadCount>4</threadCount>
		</configuration>
	</plugin>
	&lt;!&ndash; This plugin helps finding the latest plugin or dependency versions for your modules.
    Open up the terminal and execute this command to find the plugin versions you have to update:
                mvn versions:display-plugin-updates &ndash;&gt;
	<plugin>
		<groupId>org.codehaus.mojo</groupId>
		<artifactId>versions-maven-plugin</artifactId>
		<version>2.5</version>
		<configuration>
			<generateBackupPoms>false</generateBackupPoms>
		</configuration>
	</plugin>

	<plugin>
		<artifactId>maven-failsafe-plugin</artifactId>
		<version>2.22.2</version>
		<executions>
			<execution>
				<goals>
					<goal>integration-test</goal>
					<goal>verify</goal>
				</goals>
			</execution>
		</executions>
		<configuration>
			<includes>
				<include>**/*Serenity*.java</include>
			</includes>
			<parallel>classes</parallel>
			<threadCount>4</threadCount>
			<testFailureIgnore>true</testFailureIgnore>
		</configuration>
	</plugin>

	<plugin>
		<groupId>net.serenity-bdd.maven.plugins</groupId>
		<artifactId>serenity-maven-plugin</artifactId>
		<version>2.0.50</version>
		<executions>
			<execution>
				<id>serenity-reports</id>
				<phase>post-integration-test</phase>
				<goals>
					<goal>aggregate</goal>
				</goals>
			</execution>
		</executions>
	</plugin>

	<plugin>
		<groupId>org.jbehave</groupId>
		<artifactId>jbehave-maven-plugin</artifactId>
		<version>4.4</version>
		&lt;!&ndash; <executions> <execution> <id>report-stepdocs</id> <phase>integration-test</phase>
            <configuration> <includes> <include>**/*Junit.java</include> </includes>
            </configuration> <goals> <goal>report-stepdocs-as-embeddables</goal> </goals>
            </execution> </executions> &ndash;&gt;
	</plugin>-->

</project>
